commitment/client/main.css
@import "tailwindcss";
@plugin 'tailwindcss-animate';


/* put vars which refer to others */
@theme inline {
  /* Git Background Colours */
  --color-git-bg-bottom: var(--git-bg-bottom);
  --color-git-bg-primary: var(--git-bg-primary);
  --color-git-bg-secondary: var(--git-bg-secondary);
  --color-git-bg-tertiary: var(--git-bg-tertiary);
  --color-git-bg-elevated: var(--git-bg-elevated);

  /* Git Text Colours */
  --color-git-text-primary: var(--git-text-primary);
  --color-git-text-secondary: var(--git-text-secondary);
  --color-git-text-disabled: var(--git-text-disabled);

  /* Git Data-Visualisation Colours */
  --color-git-dv-blue: var(--git-dv-blue);
  --color-git-dv-orange: var(--git-dv-orange);
  --color-git-dv-green: var(--git-dv-green);
  --color-git-dv-coral: var(--git-dv-coral);
  --color-git-dv-aqua: var(--git-dv-aqua);
  --color-git-dv-yellow: var(--git-dv-yellow);
  --color-git-dv-purple: var(--git-dv-purple);
  --color-git-dv-pink: var(--git-dv-pink);
  --color-git-dv-brown: var(--git-dv-brown);
  --color-git-dv-grey: var(--git-dv-grey);
  --color-git-dv-pink-dark: var(--git-dv-pink-dark);

  /* Git Interactive Colours */
  --color-git-int-primary: var(--git-int-primary);
  --color-git-int-text: var(--git-int-text);
  --color-git-int-destructive: var(--git-int-destructive);
  --color-git-int-primary-hover: var(--git-int-primary-hover);
  --color-git-int-destructive-hover: var(--git-int-destructive-hover);
  --color-git-int-link: var(--git-int-link);

  /* Git Card Colours */
  --color-git-card-primary: var(--git-card-primary);
  --color-git-card-secondary: var(--git-card-secondary);
  --color-git-card-text: var(--git-card-text);
  --color-git-card-text-secondary: var(--git-card-text-secondary);

  /* Git Stroke Colours */
  --color-git-stroke-primary: var(--git-stroke-primary);
  --color-git-stroke-secondary: var(--git-stroke-secondary);
  --color-git-stroke-tertiary: var(--git-stroke-tertiary);

  /* Git Tabs Colours */
  --color-git-tabs-hovered: var(--git-tabs-hovered);
  --color-git-tabs-active: var(--git-tabs-active);

  /* Git Primitive Background Colours */
  --color-cararra-50: #f0f0e8;
  --color-cararra-100: #e8e8dd;
  --color-cararra-200: #d0d0b7;
  --color-cararra-300: #b7b592;
  --color-cararra-400: #a6a379;
  --color-cararra-500: #867a59;

  --color-zeus-600: #5c5c51;
  --color-zeus-700: #42423a;
  --color-zeus-750: #393932;
  --color-zeus-800: #2f2f2a;
  --color-zeus-850: #282823;
  --color-zeus-900: #252522;
  --color-zeus-950: #21211e;

  --color-ivory-100: #e8e8dd;

  --color-git-50: #fef3ee;
  --color-git-100: #ffeae1;
  --color-git-200: #ffdac9;
  --color-git-300: #febfa3;
  --color-git-400: #fa9a6f;
  --color-git-500: #f1502f;
  --color-git-600: #e12a15;
  --color-git-700: #bb1c13;
  --color-git-800: #951917;
  --color-git-900: #781816;
  --color-git-950: #41090a;

  /* Shadcn Variables */
  --color-border: var(--border);
  --color-input: var(--input);
  --color-ring: var(--ring);
  --color-background: var(--background);
  --color-foreground: var(--foreground);

  --color-primary: var(--primary);
  --color-primary-foreground: var(--primary-foreground);

  --color-secondary: var(--secondary);
  --color-secondary-foreground: var(--secondary-foreground);

  --color-destructive: var(--destructive);
  --color-destructive-foreground: var(--destructive-foreground);

  --color-muted: var(--muted);
  --color-muted-foreground: var(--muted-foreground);

  --color-accent: var(--accent);
  --color-accent-foreground: var(--accent-foreground);

  --color-popover: var(--popover);
  --color-popover-foreground: var(--popover-foreground);

  --color-card: var(--card);
  --color-card-foreground: var(--card-foreground);

  --radius-lg: var(--radius);
  --radius-md: calc(var(--radius) - 2px);
  --radius-sm: calc(var(--radius) - 4px);

  --font-sans: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji",
    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
    "Liberation Mono", "Courier New", monospace;

  --animate-accordion-down: accordion-down 0.2s ease-out;
  --animate-accordion-up: accordion-up 0.2s ease-out;

  @keyframes accordion-down {
    from {
      height: 0;
    }
    to {
      height: var(--radix-accordion-content-height);
    }
  }
  @keyframes accordion-up {
    from {
      height: var(--radix-accordion-content-height);
    }
    to {
      height: 0;
    }
  }
}

/*
  The default border color has changed to `currentcolor` in Tailwind CSS v4,
  so we've added these compatibility styles to make sure everything still
  looks the same as it did with Tailwind CSS v3.

  If we ever want to remove these styles, we need to add an explicit border
  color utility to any element that depends on these defaults.
*/
@layer base {
  *,
  ::after,
  ::before,
  ::backdrop,
  ::file-selector-button {
    border-color: var(--color-gray-200, currentcolor);
  }
}

@layer base {
  :root {
    /* Git Background Colours */
    --git-bg-bottom: var(--color-cararra-100);
    --git-bg-primary: var(--color-cararra-50);
    --git-bg-secondary: var(--color-cararra-300);
    --git-bg-tertiary: var(--color-cararra-200);
    --git-bg-elevated: #fefefa;

    /* Git Text Colours */
    --git-text-primary: #000;
    --git-text-secondary: #353531;
    --git-text-disabled: #818181;

    /* Git Data-Visualisation Colours */
    --git-dv-blue: #4e79a7;
    --git-dv-orange: #f28e2b;
    --git-dv-green: #59a14f;
    --git-dv-coral: #e15759;
    --git-dv-aqua: #76b7b2;
    --git-dv-yellow: #edc948;
    --git-dv-purple: #b07aa1;
    --git-dv-pink: #ff9da7;
    --git-dv-brown: #9c755f;
    --git-dv-grey: #bab0ac;
    --git-dv-pink-dark: #d37295;

    /* Git Interactive Colours */
    --git-int-primary: #f1502f;
    --git-int-text: #fef3ee;
    --git-int-destructive: #951917;
    --git-int-primary-hover: #e12a15;
    --git-int-destructive-hover: #781816;
    --git-int-link: #3a76a9;

    /* Git Card Colours */
    --git-card-primary: #f1502f;
    --git-card-secondary: #fde4d7;
    --git-card-text: #fff;
    --git-card-text-secondary: #000;

    /* Git Stroke Colours */
    --git-stroke-primary: rgba(53, 53, 49, 0.5);
    --git-stroke-secondary: #252522;
    --git-stroke-tertiary: #21211e;

    /* Git Tabs Colours */
    --git-tabs-hovered: #d0d0b7;
    --git-tabs-active: #f0f0e8;

    /* Shadcn Variables */
    --background: var(--git-bg-primary);/*0 0% 100%;*/
    --foreground:var(--git-text-primary); /*222.2 84% 4.9%;*/

    --card: var(--git-card-primary);/*0 0% 100%;*/
    --card-foreground:var(--git-card-text);/*222.2 84% 4.9%;*/ 

    --popover: var(--git-bg-elevated);/*0 0% 100%;*/
    --popover-foreground: var(--git-text-primary); /*222.2 84% 4.9%;*/ 

    --primary: var(--git-int-primary);/*222.2 47.4% 11.2%;*/
    --primary-foreground: var(--git-int-text);/*210 40% 98%;*/

    --secondary: var(--git-bg-elevated);/*210 40% 96.1%;*/
    --secondary-foreground:var(--git-int-text); /*222.2 47.4% 11.2%;*/

    --muted: var(--git-bg-elevated);/*210 40% 96.1%;*/
    --muted-foreground:var(--git-text-disabled); /*215.4 16.3% 46.9%;*/

    --accent: var(--git-bg-elevated);
    --accent-foreground: var(--git-text-disabled); /*;222.2 47.4% 11.2%;*/

    --destructive:var(--git-int-destructive) ; /*0 100% 50%;*/
    --destructive-foreground:var(--git-int-text) ; /*210 40% 98%;*/

    --border:var(--git-bg-elevated) ; /*214.3 31.8% 91.4%;*/
    --input: var(--git-bg-elevated); /*214.3 31.8% 91.4%;*/
    --ring: var(--git-stroke-primary); /*222.2 84% 4.9%;*/

    --radius: 0.5rem;



    --chart-1:var(--git-dv-blue);
    --chart-2:var(--git-dv-orange);
    --chart-3:var(--git-dv-green);
    --chart-4:var(--git-dv-coral);
    --chart-5:var(--git-dv-aqua);
    --chart-6:var(--git-dv-yellow);
    --chart-7:var(--git-dv-purple);
    --chart-8:var(--git-dv-pink);
    --chart-9:var(--git-dv-brown);
    --chart-10:var(--git-dv-grey);
    --chart-11:var(--git-dv-pink-dark);

  }

  .dark {
    /* Git Background Colours */
    --git-bg-bottom: #21211e;
    --git-bg-primary: #282823;
    --git-bg-secondary: #2f2f2a;
    --git-bg-tertiary: #393932;
    --git-bg-elevated: #5c5c51;

    /* Git Text Colours */
    --git-text-primary: #fff;
    --git-text-secondary: #c4c4c4;
    --git-text-disabled: #818181;

    /* Git Data-Visualisation Colours */
    --git-dv-grey: #fffffb;

    /* Git Card Colours */
    --git-card-secondary: #fbc4ad;
    --git-card-text-secondary: #fff;

    /* Git Stroke Colours */
    --git-stroke-primary: rgba(255, 255, 255, 0.49);
    --git-stroke-secondary: rgba(208, 208, 183, 0.45);
    --git-stroke-tertiary: rgba(183, 181, 146, 0.47);

    /* Git Tabs Colours */
    --git-tabs-hovered: #fff;
    --git-tabs-active: #fff;

    /* Shadcn Variables */
    --background: hsl(0 0% 3.9%);
    --foreground: hsl(0 0% 98%);

    --card: hsl(0 0% 3.9%);
    --card-foreground: hsl(0 0% 98%);

    --popover: hsl(0 0% 3.9%);
    --popover-foreground: hsl(0 0% 98%);

    --primary: hsl(0 0% 98%);
    --primary-foreground: hsl(0 0% 3.9%);

    --secondary: hsl(217.2 32.6% 17.5%);
    --secondary-foreground: hsl(0 0% 98%);

    --muted: hsl(217.2 32.6% 17.5%);
    --muted-foreground: hsl(215 20.2% 65.1%);

    --accent: hsl(217.2 32.6% 17.5%);
    --accent-foreground: hsl(0 0% 98%);

    --destructive: hsl(0 62.8% 30.6%);
    --destructive-foreground: hsl(0 0% 98%);

    --border: 217.2 32.6% 17.5%;
    --input: 217.2 32.6% 17.5%;
    --ring: 212.7 26.8% 83.9%;

    --chart-1:var(--git-dv-blue);
    --chart-2:var(--git-dv-orange);
    --chart-3:var(--git-dv-green);
    --chart-4:var(--git-dv-coral);
    --chart-5:var(--git-dv-aqua);
    --chart-6:var(--git-dv-yellow);
    --chart-7:var(--git-dv-purple);
    --chart-8:var(--git-dv-pink);
    --chart-9:var(--git-dv-brown);
    --chart-10:var(--git-dv-grey);
    --chart-11:var(--git-dv-pink-dark);
  }

  * {
    @apply border-border;
  }

  html {
    scroll-behavior: smooth;
  }

  body {
    @apply bg-background text-foreground font-mono;
    background-color: var(--git-bg-primary);
  }
}

